Make it impossible to hide one of the views in a split view setup completely by dragging the QSplitterHandle to the left or right. This fixes the problem that a hidden view disappears completely after closing the visible view. The root cause of this issue still seems to be unclear though.

BUG: 190265

svn path=/trunk/KDE/kdebase/apps/; revision=957703